style & fix: button height and width adjustments on mobile

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,7 +1,4 @@
-// @use '../../scss/global/colors' as colors;
 @use '../../scss/utils/functions' as fn;
-// @import '../../scss/utils/breakpoints';
-// @import '../../scss/utils/mixins';
 
 .aboutUs {
   padding: 3rem 6.25rem;
@@ -191,7 +188,6 @@
 
   .newsletter__input {
     width: fit-content;
-    // border: 1px solid red;
     background-color: #ffff;
     border-radius: fn.rem(10);
     margin-top: fn.rem(30);
@@ -214,7 +210,6 @@
 
 @media screen and (max-width: 1200px) {
   .aboutUs {
-    // background-color: red;
     padding: 3rem 1.5rem;
 
     .aboutUs__main {
@@ -331,8 +326,6 @@
         background-color: #b1b1d8;
         border-radius: fn.rem(10);
         position: absolute;
-        // top: -45px;
-        // right: -100px;
         z-index: -1;
         display: none;
       }
@@ -355,9 +348,7 @@
     }
 
     .boxes {
-      // border: 1px solid black;
       position: relative;
-      // width: 60%;
       height: fn.rem(150);
       margin: fn.rem(80) auto 0;
       display: none;
@@ -438,6 +429,9 @@
 }
 
 @media screen and (max-width: 576px) {
+  p {
+    font-size: fn.rem(14);
+  }
   .aboutUs {
     padding: 1rem 1.25rem;
 
@@ -472,7 +466,6 @@
       .aboutUs__img {
         width: 100%;
         height: 30rem;
-        border: 1px solid red;
 
         img {
           width: 100%;
@@ -528,7 +521,7 @@
 
   .newsletter {
     background: #0d1292;
-    padding: fn.rem(40) 0;
+    padding: fn.rem(40) 1.25rem;
     color: #fff;
 
     h1 {
@@ -548,6 +541,10 @@
 
       input {
         width: 100%;
+
+        &::placeholder {
+          font-size: fn.rem(12);
+        }
       }
     }
   }
