--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -545,7 +545,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 576px) {
   .home__section1 {
     padding: 3rem 0.5rem;
     .home__section1-article {
